// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`z-sortable-tree-items.vue should be rendered correctly 1`] = `
<draggable-stub
  animation="0"
  class="root"
  clone="[Function]"
  data-draggable=""
  disabled="true"
  drag-class=".sortable-tree-drag"
  draggable=".v-treeview-node"
  element="div"
  group="sortable-tree-root"
  value="[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object]"
>
  <div
    class="v-treeview-node"
  >
    <div
      class="v-treeview-node__root"
    >
      <v-icon-stub
        class="v-treeview-node__toggle"
      >
        M7,10L12,15L17,10H7Z
      </v-icon-stub>
      <div
        class="v-treeview-node__content"
      >
        <div
          class="v-treeview-node__label"
        >
          <span
            class="v-treeview-node__label-wrapper"
          >
            北海道ブロック
          </span>
        </div>
      </div>
    </div>
    <transition-stub
      name="expand-transition"
    >
      <!---->
    </transition-stub>
  </div>
  <div
    class="v-treeview-node"
  >
    <div
      class="v-treeview-node__root"
    >
      <v-icon-stub
        class="v-treeview-node__toggle"
      >
        M7,10L12,15L17,10H7Z
      </v-icon-stub>
      <div
        class="v-treeview-node__content"
      >
        <div
          class="v-treeview-node__label"
        >
          <span
            class="v-treeview-node__label-wrapper"
          >
            東北ブロック
          </span>
        </div>
      </div>
    </div>
    <transition-stub
      name="expand-transition"
    >
      <!---->
    </transition-stub>
  </div>
  <div
    class="v-treeview-node"
  >
    <div
      class="v-treeview-node__root"
    >
      <v-icon-stub
        class=""
      >
        M7,10L12,15L17,10H7Z
      </v-icon-stub>
      <div
        class="v-treeview-node__content"
      >
        <div
          class="v-treeview-node__label"
        >
          <span
            class="v-treeview-node__label-wrapper"
          >
            関東ブロック
          </span>
        </div>
      </div>
    </div>
    <transition-stub
      name="expand-transition"
    >
      <div
        class="v-treeview-node__children"
      >
        <draggable-stub
          animation="0"
          class="root"
          clone="[Function]"
          data-draggable=""
          data-sortable-tree-items=""
          disabled="true"
          drag-class=".sortable-tree-drag"
          draggable=".v-treeview-node"
          element="div"
          group="sortable-tree-children"
          value="[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object]"
        >
          <div
            class="v-treeview-node"
          >
            <div
              class="v-treeview-node__root single"
            >
              <!---->
              <div
                class="v-treeview-node__content"
              >
                <div
                  class="v-treeview-node__label"
                >
                  <span
                    class="v-treeview-node__label-wrapper"
                  >
                    茨城
                  </span>
                </div>
              </div>
            </div>
            <transition-stub
              name="expand-transition"
            >
              <!---->
            </transition-stub>
          </div>
          <div
            class="v-treeview-node"
          >
            <div
              class="v-treeview-node__root single"
            >
              <!---->
              <div
                class="v-treeview-node__content"
              >
                <div
                  class="v-treeview-node__label"
                >
                  <span
                    class="v-treeview-node__label-wrapper"
                  >
                    栃木
                  </span>
                </div>
              </div>
            </div>
            <transition-stub
              name="expand-transition"
            >
              <!---->
            </transition-stub>
          </div>
          <div
            class="v-treeview-node"
          >
            <div
              class="v-treeview-node__root single"
            >
              <!---->
              <div
                class="v-treeview-node__content"
              >
                <div
                  class="v-treeview-node__label"
                >
                  <span
                    class="v-treeview-node__label-wrapper"
                  >
                    群馬
                  </span>
                </div>
              </div>
            </div>
            <transition-stub
              name="expand-transition"
            >
              <!---->
            </transition-stub>
          </div>
          <div
            class="v-treeview-node"
          >
            <div
              class="v-treeview-node__root single"
            >
              <!---->
              <div
                class="v-treeview-node__content"
              >
                <div
                  class="v-treeview-node__label"
                >
                  <span
                    class="v-treeview-node__label-wrapper"
                  >
                    埼玉
                  </span>
                </div>
              </div>
            </div>
            <transition-stub
              name="expand-transition"
            >
              <!---->
            </transition-stub>
          </div>
          <div
            class="v-treeview-node"
          >
            <div
              class="v-treeview-node__root single"
            >
              <!---->
              <div
                class="v-treeview-node__content"
              >
                <div
                  class="v-treeview-node__label"
                >
                  <span
                    class="v-treeview-node__label-wrapper"
                  >
                    千葉
                  </span>
                </div>
              </div>
            </div>
            <transition-stub
              name="expand-transition"
            >
              <!---->
            </transition-stub>
          </div>
          <div
            class="v-treeview-node"
          >
            <div
              class="v-treeview-node__root single"
            >
              <!---->
              <div
                class="v-treeview-node__content"
              >
                <div
                  class="v-treeview-node__label"
                >
                  <span
                    class="v-treeview-node__label-wrapper"
                  >
                    東京
                  </span>
                </div>
              </div>
            </div>
            <transition-stub
              name="expand-transition"
            >
              <!---->
            </transition-stub>
          </div>
          <div
            class="v-treeview-node"
          >
            <div
              class="v-treeview-node__root single"
            >
              <!---->
              <div
                class="v-treeview-node__content"
              >
                <div
                  class="v-treeview-node__label"
                >
                  <span
                    class="v-treeview-node__label-wrapper"
                  >
                    神奈川
                  </span>
                </div>
              </div>
            </div>
            <transition-stub
              name="expand-transition"
            >
              <!---->
            </transition-stub>
          </div>
        </draggable-stub>
      </div>
    </transition-stub>
  </div>
  <div
    class="v-treeview-node"
  >
    <div
      class="v-treeview-node__root"
    >
      <v-icon-stub
        class="v-treeview-node__toggle"
      >
        M7,10L12,15L17,10H7Z
      </v-icon-stub>
      <div
        class="v-treeview-node__content"
      >
        <div
          class="v-treeview-node__label"
        >
          <span
            class="v-treeview-node__label-wrapper"
          >
            甲信越ブロック
          </span>
        </div>
      </div>
    </div>
    <transition-stub
      name="expand-transition"
    >
      <!---->
    </transition-stub>
  </div>
  <div
    class="v-treeview-node"
  >
    <div
      class="v-treeview-node__root"
    >
      <v-icon-stub
        class="v-treeview-node__toggle"
      >
        M7,10L12,15L17,10H7Z
      </v-icon-stub>
      <div
        class="v-treeview-node__content"
      >
        <div
          class="v-treeview-node__label"
        >
          <span
            class="v-treeview-node__label-wrapper"
          >
            中部ブロック
          </span>
        </div>
      </div>
    </div>
    <transition-stub
      name="expand-transition"
    >
      <!---->
    </transition-stub>
  </div>
  <div
    class="v-treeview-node"
  >
    <div
      class="v-treeview-node__root"
    >
      <v-icon-stub
        class="v-treeview-node__toggle"
      >
        M7,10L12,15L17,10H7Z
      </v-icon-stub>
      <div
        class="v-treeview-node__content"
      >
        <div
          class="v-treeview-node__label"
        >
          <span
            class="v-treeview-node__label-wrapper"
          >
            関西ブロック
          </span>
        </div>
      </div>
    </div>
    <transition-stub
      name="expand-transition"
    >
      <!---->
    </transition-stub>
  </div>
  <div
    class="v-treeview-node"
  >
    <div
      class="v-treeview-node__root"
    >
      <v-icon-stub
        class="v-treeview-node__toggle"
      >
        M7,10L12,15L17,10H7Z
      </v-icon-stub>
      <div
        class="v-treeview-node__content"
      >
        <div
          class="v-treeview-node__label"
        >
          <span
            class="v-treeview-node__label-wrapper"
          >
            中四国ブロック
          </span>
        </div>
      </div>
    </div>
    <transition-stub
      name="expand-transition"
    >
      <!---->
    </transition-stub>
  </div>
  <div
    class="v-treeview-node"
  >
    <div
      class="v-treeview-node__root"
    >
      <v-icon-stub
        class="v-treeview-node__toggle"
      >
        M7,10L12,15L17,10H7Z
      </v-icon-stub>
      <div
        class="v-treeview-node__content"
      >
        <div
          class="v-treeview-node__label"
        >
          <span
            class="v-treeview-node__label-wrapper"
          >
            九州ブロック
          </span>
        </div>
      </div>
    </div>
    <transition-stub
      name="expand-transition"
    >
      <!---->
    </transition-stub>
  </div>
</draggable-stub>
`;

exports[`z-sortable-tree-items.vue should be update "opened" when props.open is changed 1`] = `
<draggable-stub
  animation="0"
  class="root"
  clone="[Function]"
  data-draggable=""
  disabled="true"
  drag-class=".sortable-tree-drag"
  draggable=".v-treeview-node"
  element="div"
  group="sortable-tree-root"
  value="[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object]"
>
  <div
    class="v-treeview-node"
  >
    <div
      class="v-treeview-node__root"
    >
      <v-icon-stub
        class="v-treeview-node__toggle"
      >
        M7,10L12,15L17,10H7Z
      </v-icon-stub>
      <div
        class="v-treeview-node__content"
      >
        <div
          class="v-treeview-node__label"
        >
          <span
            class="v-treeview-node__label-wrapper"
          >
            北海道ブロック
          </span>
        </div>
      </div>
    </div>
    <transition-stub
      name="expand-transition"
    >
      <!---->
    </transition-stub>
  </div>
  <div
    class="v-treeview-node"
  >
    <div
      class="v-treeview-node__root"
    >
      <v-icon-stub
        class="v-treeview-node__toggle"
      >
        M7,10L12,15L17,10H7Z
      </v-icon-stub>
      <div
        class="v-treeview-node__content"
      >
        <div
          class="v-treeview-node__label"
        >
          <span
            class="v-treeview-node__label-wrapper"
          >
            東北ブロック
          </span>
        </div>
      </div>
    </div>
    <transition-stub
      name="expand-transition"
    >
      <!---->
    </transition-stub>
  </div>
  <div
    class="v-treeview-node"
  >
    <div
      class="v-treeview-node__root"
    >
      <v-icon-stub
        class=""
      >
        M7,10L12,15L17,10H7Z
      </v-icon-stub>
      <div
        class="v-treeview-node__content"
      >
        <div
          class="v-treeview-node__label"
        >
          <span
            class="v-treeview-node__label-wrapper"
          >
            関東ブロック
          </span>
        </div>
      </div>
    </div>
    <transition-stub
      name="expand-transition"
    >
      <div
        class="v-treeview-node__children"
      >
        <draggable-stub
          animation="0"
          class="root"
          clone="[Function]"
          data-draggable=""
          data-sortable-tree-items=""
          disabled="true"
          drag-class=".sortable-tree-drag"
          draggable=".v-treeview-node"
          element="div"
          group="sortable-tree-children"
          value="[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object]"
        >
          <div
            class="v-treeview-node"
          >
            <div
              class="v-treeview-node__root single"
            >
              <!---->
              <div
                class="v-treeview-node__content"
              >
                <div
                  class="v-treeview-node__label"
                >
                  <span
                    class="v-treeview-node__label-wrapper"
                  >
                    茨城
                  </span>
                </div>
              </div>
            </div>
            <transition-stub
              name="expand-transition"
            >
              <!---->
            </transition-stub>
          </div>
          <div
            class="v-treeview-node"
          >
            <div
              class="v-treeview-node__root single"
            >
              <!---->
              <div
                class="v-treeview-node__content"
              >
                <div
                  class="v-treeview-node__label"
                >
                  <span
                    class="v-treeview-node__label-wrapper"
                  >
                    栃木
                  </span>
                </div>
              </div>
            </div>
            <transition-stub
              name="expand-transition"
            >
              <!---->
            </transition-stub>
          </div>
          <div
            class="v-treeview-node"
          >
            <div
              class="v-treeview-node__root single"
            >
              <!---->
              <div
                class="v-treeview-node__content"
              >
                <div
                  class="v-treeview-node__label"
                >
                  <span
                    class="v-treeview-node__label-wrapper"
                  >
                    群馬
                  </span>
                </div>
              </div>
            </div>
            <transition-stub
              name="expand-transition"
            >
              <!---->
            </transition-stub>
          </div>
          <div
            class="v-treeview-node"
          >
            <div
              class="v-treeview-node__root single"
            >
              <!---->
              <div
                class="v-treeview-node__content"
              >
                <div
                  class="v-treeview-node__label"
                >
                  <span
                    class="v-treeview-node__label-wrapper"
                  >
                    埼玉
                  </span>
                </div>
              </div>
            </div>
            <transition-stub
              name="expand-transition"
            >
              <!---->
            </transition-stub>
          </div>
          <div
            class="v-treeview-node"
          >
            <div
              class="v-treeview-node__root single"
            >
              <!---->
              <div
                class="v-treeview-node__content"
              >
                <div
                  class="v-treeview-node__label"
                >
                  <span
                    class="v-treeview-node__label-wrapper"
                  >
                    千葉
                  </span>
                </div>
              </div>
            </div>
            <transition-stub
              name="expand-transition"
            >
              <!---->
            </transition-stub>
          </div>
          <div
            class="v-treeview-node"
          >
            <div
              class="v-treeview-node__root single"
            >
              <!---->
              <div
                class="v-treeview-node__content"
              >
                <div
                  class="v-treeview-node__label"
                >
                  <span
                    class="v-treeview-node__label-wrapper"
                  >
                    東京
                  </span>
                </div>
              </div>
            </div>
            <transition-stub
              name="expand-transition"
            >
              <!---->
            </transition-stub>
          </div>
          <div
            class="v-treeview-node"
          >
            <div
              class="v-treeview-node__root single"
            >
              <!---->
              <div
                class="v-treeview-node__content"
              >
                <div
                  class="v-treeview-node__label"
                >
                  <span
                    class="v-treeview-node__label-wrapper"
                  >
                    神奈川
                  </span>
                </div>
              </div>
            </div>
            <transition-stub
              name="expand-transition"
            >
              <!---->
            </transition-stub>
          </div>
        </draggable-stub>
      </div>
    </transition-stub>
  </div>
  <div
    class="v-treeview-node"
  >
    <div
      class="v-treeview-node__root"
    >
      <v-icon-stub
        class="v-treeview-node__toggle"
      >
        M7,10L12,15L17,10H7Z
      </v-icon-stub>
      <div
        class="v-treeview-node__content"
      >
        <div
          class="v-treeview-node__label"
        >
          <span
            class="v-treeview-node__label-wrapper"
          >
            甲信越ブロック
          </span>
        </div>
      </div>
    </div>
    <transition-stub
      name="expand-transition"
    >
      <!---->
    </transition-stub>
  </div>
  <div
    class="v-treeview-node"
  >
    <div
      class="v-treeview-node__root"
    >
      <v-icon-stub
        class="v-treeview-node__toggle"
      >
        M7,10L12,15L17,10H7Z
      </v-icon-stub>
      <div
        class="v-treeview-node__content"
      >
        <div
          class="v-treeview-node__label"
        >
          <span
            class="v-treeview-node__label-wrapper"
          >
            中部ブロック
          </span>
        </div>
      </div>
    </div>
    <transition-stub
      name="expand-transition"
    >
      <!---->
    </transition-stub>
  </div>
  <div
    class="v-treeview-node"
  >
    <div
      class="v-treeview-node__root"
    >
      <v-icon-stub
        class="v-treeview-node__toggle"
      >
        M7,10L12,15L17,10H7Z
      </v-icon-stub>
      <div
        class="v-treeview-node__content"
      >
        <div
          class="v-treeview-node__label"
        >
          <span
            class="v-treeview-node__label-wrapper"
          >
            関西ブロック
          </span>
        </div>
      </div>
    </div>
    <transition-stub
      name="expand-transition"
    >
      <!---->
    </transition-stub>
  </div>
  <div
    class="v-treeview-node"
  >
    <div
      class="v-treeview-node__root"
    >
      <v-icon-stub
        class="v-treeview-node__toggle"
      >
        M7,10L12,15L17,10H7Z
      </v-icon-stub>
      <div
        class="v-treeview-node__content"
      >
        <div
          class="v-treeview-node__label"
        >
          <span
            class="v-treeview-node__label-wrapper"
          >
            中四国ブロック
          </span>
        </div>
      </div>
    </div>
    <transition-stub
      name="expand-transition"
    >
      <!---->
    </transition-stub>
  </div>
  <div
    class="v-treeview-node"
  >
    <div
      class="v-treeview-node__root"
    >
      <v-icon-stub
        class="v-treeview-node__toggle"
      >
        M7,10L12,15L17,10H7Z
      </v-icon-stub>
      <div
        class="v-treeview-node__content"
      >
        <div
          class="v-treeview-node__label"
        >
          <span
            class="v-treeview-node__label-wrapper"
          >
            九州ブロック
          </span>
        </div>
      </div>
    </div>
    <transition-stub
      name="expand-transition"
    >
      <!---->
    </transition-stub>
  </div>
</draggable-stub>
`;

exports[`z-sortable-tree-items.vue should update the content when props.value is changed 1`] = `
<draggable-stub
  animation="0"
  class="root"
  clone="[Function]"
  data-draggable=""
  disabled="true"
  drag-class=".sortable-tree-drag"
  draggable=".v-treeview-node"
  element="div"
  group="sortable-tree-root"
  value="[object Object]"
>
  <div
    class="v-treeview-node"
  >
    <div
      class="v-treeview-node__root"
    >
      <v-icon-stub
        class="v-treeview-node__toggle"
      >
        M7,10L12,15L17,10H7Z
      </v-icon-stub>
      <div
        class="v-treeview-node__content"
      >
        <div
          class="v-treeview-node__label"
        >
          <span
            class="v-treeview-node__label-wrapper"
          >
            関東ブロック
          </span>
        </div>
      </div>
    </div>
    <transition-stub
      name="expand-transition"
    >
      <!---->
    </transition-stub>
  </div>
</draggable-stub>
`;
